# AstraNote

./: .coveragerc  .gitignore  LICENSE  README.md  alembic.ini  alembic_server.ini  pyproject.toml  pytest.ini  requirements.txt  test_all.py
AI Working Log/: working-log-2026-04-08.md  working-log-2026-04-15.md  working-log-2026-04-29.md  working-log-2026-05-04.md  working-log-2026-05-05.md  working-log-2026-05-10.md  working-log-2026-05-11.md  working-log-2026-05-12.md  working-log-2026-05-14.md  working-log-2026-05-15.md  working-log-2026-05-18.md  working-log-2026-05-19.md  working-log-2026-05-20.md  working-log-2026-05-21.md  working-log-2026-06-01.md  working-log-2026-06-04-sprint5a1.md  working-log-2026-06-04-sprint5a2.md  working-log-2026-06-04.md  working-log-2026-06-05.md  working-log-2026-06-06.md
Copilot/: Definition of Done.md  Working Agreement.md  discussion-list.md  working-log-2026-04-08.md
alembic/: env.py
alembic_server/: env.py
docs/: Architecture Decision Log.docx  AstraNotes Project Charter.docx  Initial Requirement Set.docx  UML_activity.puml  UML_deployment.puml  UML_object.puml  UML_package_current.puml  UML_usecase.puml  ai-use-disclosure.md  bdd-testing.md  bdd_testing.md  design.md  operations.md  prd.md  test-execution-evidence.md  test-workflow.md  test_workflow.md  traceability-metrics.md
planning/: backlog.md  design.md  prd.md  requirements.md  sprint-zero-plan.md  traceability-metrics.md  user-stories.md
plugins/: summary_plugin.py
src/: cli.py
tests/: conftest.py  test_all.py  test_core.py  test_notes.py  test_sprint1.py  (+8 more)
(+77 files in other folders)
