[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "astranotes"
version = "0.1.0"
description = "A local-first note-taking app with optional cloud sync"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "jsonschema>=4.0",
    "bcrypt>=4.0",
    "cryptography>=41.0",
    "joserfc>=0.12",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "PySide6>=6.7",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-bdd>=7.0",
]

[project.scripts]
astranotes = "src.cli:cli"
astranotes-gui = "src.desktop.app_controller:main"
astranotes-server = "src.server.main:server_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
